feat: update blog log and add code paste

--- a/source/_posts/博客更新日志.md
+++ b/source/_posts/博客更新日志.md
@@ -21,9 +21,160 @@ top: 1
 
 <!--more-->
 
+# 2018年
+
+## 4月
+
+### 24日
+
+- 网站底部添加本站文章总数
+- 优化 hexo，采用 fragment_cache 缓存优化生成网页时间，由原来的 2min 减少到 8s 左右
+
+### 22日
+
+- 首页添加 `<meta name="renderer" content="webkit">` 请求头，以开启360极速模式。
+- 解决 PC 端子类滚动引起父类滚动问题
+
+### 20日
+
+- 阿里云备案成功，在博客底部添加 ICP 备案号
+- 打开百度自动推动，百度统计，奇虎360自动推送功能
+
+### 19日
+
+- 由于 gulp 中的 uglify 组件添加对 es6 的支持，故解决了升级 hexo-blog-encrypt 组件编译错误问题
+- hexo-blog-encrypt 中添加加密文章解密后可以查看目录的功能。
+- 删除 hexo-fs 组件，有了这个会报错，hexo 已含有这个组件。
+
+### 18日
+
+- 修复 Ubuntu 上 hexo g 不能生成网页的错误，之前一直卡在这
+- 更改 gitlab 部署脚本，博客迁移到阿里云服务器
+- 升级 package.json 的各个组件
+
+### 17日
+
+- 文章图片的最大高度由 250px 变为 300px
+
+### 16日
+
+- 文章宽度由 80em 变为 75em
+
+### 14日
+
+- 博客迁移到 gitlab 上，编写 gitlab 部署脚本，不再更新github
+- 删除 yelee 主题多余部分
+- 去掉标签切换圆角效果
+- 修复目录切换文字切换问题
+- <s>升级 hexo-blog-encrypt 组件</s>，发现编译错误，已降级
+
+### 9日
+
+- 修复移动端文章、gitalk过于靠边 bug
+
+### 8日
+
+- 修改 hexo-qiniu-sync 组件，为了 lazysizes 默认只加载图片的 data-src 属性
+- 优化网站图片大小，采用七牛云压缩
+- 关闭背景图随机切换，以提高加载速度
+- 文章宽度由 70em 变为 80em
+- 更改标签切换图标与主题风格一致
+- 修复点击目录标题图标切换错误
+
+### 7日
+
+- 优化 js 加载速度，尽量采用 defer，async 属性
+- mathjax 修改为默认全局不加载，按文章需求加载
+- 关闭 addthis 分享，提高加载速度
+- 关闭谷歌、百度统计
+- 新增 lazysizes 组件库，实现图片的惰性加载
+- cdn 统一更换为 bootcss 源
+- 升级 fancybox、mathjax 版本，并配置 fancybox 相关参数
+
+### 4日
+
+- 博客各组件添加阴影效果
+
+### 3日
+
+- 添加 markdownlint 规范化 markdown 格式，并添加钩子函数
+
+### 2日
+
+- 移动端的目录按钮调整位置并添加阴影效果
+
+### 1日
+
+- 修改 post 模板
+- 移动端最大宽度由 800px 变为 1040px
+
+## 3月
+
+### 31日
+
+- 添加 coding 部署方式
+
+### 30日
+
+- 实现文章小图大图的不同加载，以及添加水印的效果
+
+### 28日
+
+- 将图片迁移到七牛云，并采用 hexo-qiniu-sync 实现自动上传
+- 删除多余的 mdui，next 主题
+
+### 25日
+
+- 添加 hexo-tag-aplayer 音乐播放器
+
+### 24日
+
+- 限制文章图片的最大高度为 250px
+
+### 22日
+
+- 字号由 20px 变为 18px
+- 修复移动端头像不在中间的 bug
+
+### 21日
+
+- 上一页，下一页由英文变为中文
+
+### 18日
+
+- 更换网站头像，添加头像旋转变色特效
+
+### 17日
+
+- 代码自动检测由 true 改为 false
+
+## 2月
+
+### 24日
+
+- github 上传方式由 https 变为 ssh
+
 # 2017年
 
 ## 12月
+
+### 24日
+
+- 发现文章头部的几天前是静态数据，去掉此功能
+
+### 15日
+
+- git-cz 选项提交，commitlint 提交格式规范工具，conventional-changelog 生成 changelog 日志，并在 husky 中添加响应执行脚本
+- 更换网站头像
+- 添加文章头部几天前提示（后来被验证错误，因为是静态网站的原因）
+
+### 12日
+
+- 左边栏宽度由 500px 调整到 400px
+
+### 10日
+
+- 添加谷歌分析 id
 
 ### 9日
 
