feat: change mobile slider

--- a/source/_posts/博客更新日志.md
+++ b/source/_posts/博客更新日志.md
@@ -25,6 +25,17 @@ top: 1
 
 ## 4月
 
+### 26日
+
+- 添加 live2d 头像，保留原来的头像，实现切换效果
+- 修复谷歌浏览器下移动端侧边栏打开后背景透明问题
+- 更换移动端侧边栏
+
+### 25日
+
+- 更换网站头像为萌黑猫
+- 添加代码复制功能
+
 ### 24日
 
 - 网站底部添加本站文章总数
