feat: add mvvm and tx interview

--- a/source/_posts/博客更新日志.md
+++ b/source/_posts/博客更新日志.md
@@ -25,6 +25,13 @@ top: 1
 
 ## 4月
 
+### 27日
+
+- 修复初次访问网站头像切换问题
+- 优化移动端下的加载脚本：移动端不加载 live2d，PC端不加载 slideout
+- 修复文章原始链接不生效的问题
+- 改变博客字体，增加行高
+
 ### 26日
 
 - 添加 live2d 头像，保留原来的头像，实现切换效果
