--- a/source/_posts/腾讯一面电话面试.md
+++ b/source/_posts/腾讯一面电话面试.md
@@ -24,9 +24,9 @@ comments:
 2. 客服系统采用什么架构？
 3. Ionic框架是做什么的？
 4. Ionic前身是解决什么问题的？
-5. 客服系统为什么采用这个框架？为了移动端PC端代码的一次编写
-6. 客服系统中采用了什么技术？websocket怎么实现的？还有什么别的方式来实现消息推送机制？
-7. 当时用的Angular的版本？Angular指令的了解？双向绑定是怎么实现的？
+5. 客服系统为什么采用这个框架？为了移动端PC端代码的一次编写，美工不足
+6. websocket怎么实现的？还有什么别的方式来实现消息推送机制？
+7. 当时用的Angular的版本？双向绑定是怎么实现的？
 8. 301与302的区别？
 9. jquery中bind和on的用法？以及他们的区别？优缺点？
 10. 商家后台技术栈？react是什么东西？react虚拟dom算法的实现方式？虚拟dom是什么？
