docs: add tx interview

--- a/source/_posts/腾讯一面面试总结.md
+++ b/source/_posts/腾讯一面面试总结.md
@@ -175,3 +175,13 @@ vue.js 则是采用数据劫持结合发布者-订阅者模式的方式，通过
 
 <div align="center">{% qnimg 132184689-57b310ea1804f_articlex.png alt:mvvm架构 %}</div>
 
+## 301与302区别？
+
+302重定向只是暂时的重定向，搜索引擎会抓取新的内容而保留旧的地址，因为服务器返回302，所以，搜索搜索引擎认为新的网址是暂时的。
+
+301重定向是永久的重定向，搜索引擎在抓取新的内容的同时也将旧的网址替换为了重定向之后的网址。
+
+## jquery中bind和on的用法？以及他们的区别？优缺点？
+
+
+
